Added checking if the user is authorized to give the test

--- a/oem/templates/test.html
+++ b/oem/templates/test.html
@@ -1,23 +1,11 @@
 <html>
 <head>
-	<title>My first app</title>
+	<title>Test</title>
 </head>
 <body>
 	<h1>
 		MOHA BITCH
 	<h1>
-	<ol type="1">
-	{%for text in question_text%}
-			<li>
-				{{text}}
-				<ul type="A">
-					{{choice_array.forloop.counter0.0}}
-					{%for choice in choice_array.forloop.counter0 %}
-						<li>{{choice}}</li>
-					{% endfor %}
-				</ul>
-			</li>
-	{% endfor %}
-	</ol>
+	{{ form }}
 </body>
 </html> 
