--- a/oem/templates/test.html
+++ b/oem/templates/test.html
@@ -22,23 +22,23 @@
 
 {% block formbody %}
 
-<div id="clockdiv">
-	<div>
-		<span class="days"></span>
-		<div class="smalltext">Days</div>
-	
-		<span class="hours"></span>
-		<div class="smalltext">Hours</div>
-	</div>
-	<div>
-		<span class="minutes"></span>
-		<div class="smalltext">Minutes</div>
-	</div>
-	<div>
-		<span class="seconds"></span>
-		<div class="smalltext">Seconds</div>
-	</div>
-</div>
+<span id="clockdiv" style="float: right;">
+	<span>
+		<span id="days"></span>
+		<span class="smalltext"> Days </span>
+
+		<span id="hours"></span>
+		<span class="smalltext">:</span>
+	</span>
+	<span>
+		<span id="minutes"></span>
+		<span class="smalltext">:</span>
+	</span>
+	<span>
+		<span id="seconds"></span>
+		<span class="smalltext"></span>
+	</span>
+</span>
 
 <script type="text/javascript">		
 	function getTimeRemaining(endtime)
@@ -57,15 +57,18 @@
 	function initializeClock(id, endtime) 
 	{
 		var clock = document.getElementById(id);
-		var daysSpan = clock.querySelector('.days');
-		var hoursSpan = clock.querySelector('.hours');
-		var minutesSpan = clock.querySelector('.minutes');
-		var secondsSpan = clock.querySelector('.seconds');
+		var daysSpan = clock.querySelector('#days');
+		var hoursSpan = clock.querySelector('#hours');
+		var minutesSpan = clock.querySelector('#minutes');
+		var secondsSpan = clock.querySelector('#seconds');
 		
 		function updateClock() 
 		{
 			var t = getTimeRemaining(endtime);
 			daysSpan.innerHTML = t.days;
+            if(t.days==0) {
+                daysSpan.style.visibility = False
+            }
 			hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
 			minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
 			secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
