--- a/oem/templates/test.html
+++ b/oem/templates/test.html
@@ -13,6 +13,7 @@
 <style type="text/css">
     {{ form.css }}
 </style>
+
 {% endblock %}
 
 {% block formclass %}{{ form.blockclass|default:"col s12 m8 offset-m2 l8 offset-l2" }}{% endblock %}
@@ -20,6 +21,69 @@
 {% block formtitle %}{{ form.title }}{% endblock %}
 
 {% block formbody %}
+
+<div id="clockdiv">
+	<div>
+		<span class="days"></span>
+		<div class="smalltext">Days</div>
+	
+		<span class="hours"></span>
+		<div class="smalltext">Hours</div>
+	</div>
+	<div>
+		<span class="minutes"></span>
+		<div class="smalltext">Minutes</div>
+	</div>
+	<div>
+		<span class="seconds"></span>
+		<div class="smalltext">Seconds</div>
+	</div>
+</div>
+
+<script type="text/javascript">		
+	function getTimeRemaining(endtime)
+	{
+
+		var t = Date.parse(endtime) - Date.parse(new Date());
+		var seconds = Math.floor((t / 1000) % 60);
+		var minutes = Math.floor((t / 1000 / 60) % 60);
+		var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+		var days = Math.floor(t / (1000 * 60 * 60 * 24));
+
+		var ret = {total:t, days:days, hours:hours, minutes:minutes, seconds:seconds};
+		return ret;
+	}
+
+	function initializeClock(id, endtime) 
+	{
+		var clock = document.getElementById(id);
+		var daysSpan = clock.querySelector('.days');
+		var hoursSpan = clock.querySelector('.hours');
+		var minutesSpan = clock.querySelector('.minutes');
+		var secondsSpan = clock.querySelector('.seconds');
+		
+		function updateClock() 
+		{
+			var t = getTimeRemaining(endtime);
+			daysSpan.innerHTML = t.days;
+			hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+			minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+			secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
+
+			if (t.total <= 0)
+			{
+				clearInterval(timeinterval);
+			}
+		}
+		
+		updateClock();
+		var timeinterval = setInterval(updateClock, 1000);
+	}
+
+	var deadline = new Date(Date.parse(new Date()) + {{duration}});
+	initializeClock('clockdiv', deadline);
+
+</script>
         {% form form=form %}{% endform %}
 
 {% endblock %}
