--- a/oem/templates/404.html
+++ b/oem/templates/404.html
@@ -1,13 +1,17 @@
-<html>
-  <head>
-    <title>Not Found</title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body>
-  	<p>
-  		404 : Page not found
-  		<a href = '/'> Go to home </a>
-  	</p>
-  </body>
-</html>
+{% extends "material/frontend/base_module.html" %}
+{% load i18n material_form %}
+
+{% block content %}
+<div class="row">
+    <div class="col s12 offset-m1 m10">
+        <div class="card">
+            <div class="card-content">
+                <center><p>
+                    <b>404</b> : Page not found
+                    <a href = '/'> Go to home </a>
+                </p></center>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
