Improoved test UI

--- a/oem/material/frontend/templates/material/frontend/base_module.html
+++ b/oem/material/frontend/templates/material/frontend/base_module.html
@@ -1,5 +1,5 @@
 {% extends 'material/frontend/base_site.html,material/frontend/base_pjax.html'|pjax:request %}
 
-{% block title %}{{ current_module.label }} - {{ block.super }}{% endblock %}
+{% block title %}{{ page.label }} - {{ block.super }}{% endblock %}
 
-{% block page_title %}<a href="{{ current_module.index_url }}">{{ current_module.label }}</a>{% endblock %}
+{% block page_title %}<a href="{{ page.index_url }}">{{ page.label }}</a>{% endblock %}
