--- a/oem/templates/lineChart.html
+++ b/oem/templates/lineChart.html
@@ -8,7 +8,7 @@
       var title = {{course_name}}
       var axisNameX = 'Tests'
       var axisNameY = 'Marks'
-      var testData = [ ['testName', 'Marks'], ['test1', 10], ['test2', 23], ['test3', 30], ['test4', 25], ['test5', 45] ]
+      var testData = {{data}}
     // Change only the above data
 
       google.charts.load('current', {'packages':['corechart']});
