Completed the project few authentications left

--- a/oem/material/frontend/templates/material/frontend/base.html
+++ b/oem/material/frontend/templates/material/frontend/base.html
@@ -25,6 +25,7 @@
         <script src="{% static 'material/frontend/js/jquery.pjax.js' %}"></script>
         <script src="{% static 'material/js/material_init.js' %}"></script>
         <script src="{% static 'material/frontend/js/frontend.js' %}"></script>
+        <script src="{% static 'material/frontend/js/Chart.js' %}"></script>
         {% endblock %}
 
         {% block extrahead %}{% endblock %}
