--- a/oem/material/templates/material/frontend/includes/user_menu.html
+++ b/oem/material/templates/material/frontend/includes/user_menu.html
@@ -1,5 +1,8 @@
 {% load i18n %}
 <ul id="user-menu" class="dropdown-content">
     <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
+{#    {% if request.user.is_staff %}#}
+{#        <li><a href="/admin/">{% trans "Admin" %}</a></li>#}
+{#    {% endif %}#}
     {% block user_menu_extra %}{% endblock %}
 </ul>
