--- a/oem/templates/test_submit.html
+++ b/oem/templates/test_submit.html
@@ -6,13 +6,16 @@
     <div class="col s12 offset-m3 m6">
         <div class="card">
             <div class="card-content">
-                <center>{% if not submitted %}
+                <center>{% if submitted %}
                     <h4>Test Successfully Submitted</h4>
                     <br>
                     <p>
                         You got <b>{{correct_count}}</b> questions correct and your final score is <b>{{marks}}</b>
                     </p>{% else %}
-                    <h4>You are not allowed to give the test</h4>
+                    <h4>Test not Submitted</h4>
+                    <br>
+                    <p>
+                        You got <b>{{correct_count}}</b> questions correct and your final score is <b>{{marks}}</b>
                     {% endif %}
                 </center>
             </div>
