--- a/oem/material/templates/registration/logged_out.html
+++ b/oem/material/templates/registration/logged_out.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-content">
                 <span class="card-title black-text">{{ title }}</span>
-                <p><br/>{% trans "Thanks for spending some quality time with the Web site today." %}</p>
+                <p><br/>{% trans "Thanks for spending some quality time with the us today." %}</p>
             </div>
             <div class="card-action right-align">
                 <a href="{% url 'login' %}" class="btn btn-primary white-text">{% trans 'Log in again' %}</a>
