--- a/oem/templates/faculty_view.html
+++ b/oem/templates/faculty_view.html
@@ -11,7 +11,7 @@
                 {% for course in faculty_courses %}
                     <tr>
                     <td><a href="{% url 'facultycourse' course.pk %}">{{ course.name }}</a></td>
-                    <td>{{ course.Testset }}</td>
+                    <td>{{ course.test_set.count }}</td>
                     </tr>
                 {% endfor %}
                 </table>
